Add the command line option to optimize the shaders